--- a/.travis.yml
+++ b/.travis.yml
@@ -47,11 +47,14 @@ addons:
       - boost1.61
     sources: &sources
       - sourceline: 'ppa:rakhimov/boost'
-      - ubuntu-toolchain-r-test
+#      - ubuntu-toolchain-r-test
 #      - llvm-toolchain-xenial-4.0
 
 
 before_install:
+# if added in cuda, it upgrades to gcc-5.5, which is not supported by cuda 10-1
+    - if [[ $TEST_SUITE != 'cuda'     ]];  then sudo -E apt-add-repository -y "ppa:ubuntu-toolchain-r/test"; fi
+
     # define a compiler variable for use in if statements
     - if [[ $TRAVIS_OS_NAME == 'linux' && $CXX == 'clang++' ]]; then export COMPILER=clang++; fi
     - if [[ $TRAVIS_OS_NAME == 'linux' && $CXX == 'g++'     ]]; then export COMPILER=g++; fi
