--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ addons:
 #      - g++-7
 #      - gcc-7
       - clang-4.0
-      - libboost
+      - libboost1.70
     sources: &sources
       - sourceline: 'ppa:mhier/libboost-latest'
 #      - ubuntu-toolchain-r-test
