Revert "travis: fix installation of boost 1.70"
This reverts commit 67f886573cb9ba1cf78edfaf97f16522f9b15d2d.

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ addons:
 #      - g++-7
 #      - gcc-7
       - clang-4.0
-      - libboost1.70
+      - libboost
     sources: &sources
       - sourceline: 'ppa:mhier/libboost-latest'
 #      - ubuntu-toolchain-r-test
