Revert "travis: try other ppa for boost 1.70"
This reverts commit aded71e28104aa9fe9d14e7509caf72c4c02ea38.

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,9 +44,9 @@ addons:
 #      - g++-7
 #      - gcc-7
       - clang-4.0
-      - libboost
+      - boost1.61
     sources: &sources
-      - sourceline: 'ppa:mhier/libboost-latest'
+      - sourceline: 'ppa:rakhimov/boost'
 #      - ubuntu-toolchain-r-test
 #      - llvm-toolchain-xenial-4.0
 
