--- a/.travis.yml
+++ b/.travis.yml
@@ -76,9 +76,9 @@ before_install:
     - if [[ $TEST_SUITE == 'cuda'     ]];  then sudo dpkg -i cuda-repo-ubuntu1604_8.0.61-1_amd64.deb; fi
 
     - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo apt-get update; fi
-#    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew update; fi
-#    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew unlink python; fi
-#    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew upgrade python@2; fi
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew update; fi
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew unlink python; fi
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew upgrade python@2; fi
 
 # first find brew python python-config
     - if [[ $TRAVIS_OS_NAME == "osx" ]]; then export BREWPYCONFIG=`brew ls python2 | grep config | head -n1`; fi
