yet another attempt at installing rvm on osx: use master branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -156,7 +156,7 @@ install:
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then sudo pip2 install --only-binary=numpy,scipy numpy scipy --ignore-installed six; fi
 
 #    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install gpg2; fi
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then \curl -sSL https://get.rvm.io | bash -s stable; fi
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then \curl -sSL https://get.rvm.io | bash --branch stable; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then rvm reload; fi
     #- if [[ $TRAVIS_OS_NAME == 'osx' ]]; then curl -sSL https://rvm.io/pkuczynski.asc | gpg --import -; fi
     #- if [[ $TRAVIS_OS_NAME == 'osx' ]]; then gpg --keyserver hkp://pool.sks-keyservers.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3 7D2BAF1CF37B13E2069D6956105BD0E739499BDB; fi
