--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,3 +7,6 @@ add_subdirectory(python)
 add_subdirectory(common)
 add_subdirectory(blk2m_hello_world)
 add_subdirectory(toms748)
+if(USE_MPI)
+  add_subdirectory(mpi)
+endif()
