icicle plotting tests: fix paths

--- a/models/kinematic_2D/tests/paper_GMD_2015/fig_a/CMakeLists.txt
+++ b/models/kinematic_2D/tests/paper_GMD_2015/fig_a/CMakeLists.txt
@@ -26,13 +26,13 @@ add_test(calc calc ${CMAKE_BINARY_DIR})
 
 foreach(micro blk_1m blk_2m lgrngn)
   add_executable(plot_${micro} plot_${micro}.cpp)
-  add_test(plot_${micro} plot_${micro} ${CMAKE_BINARY_DIR})
+  add_test(plot_${micro} plot_${micro} ${CMAKE_CURRENT_BINARY_DIR})
   target_link_libraries(plot_${micro} ${libmpdataxx_LIBRARIES})
   target_include_directories(plot_${micro} PUBLIC ${libmpdataxx_INCLUDE_DIRS})
 endforeach()
 
 add_executable(plot_lgrngn_spec plot_lgrngn_spec.cpp)
-add_test(plot_lgrngn_spec plot_lgrngn_spec ${CMAKE_BINARY_DIR})
+add_test(plot_lgrngn_spec plot_lgrngn_spec ${CMAKE_CURRENT_BINARY_DIR})
 target_link_libraries(plot_lgrngn_spec ${libmpdataxx_LIBRARIES})
 target_include_directories(plot_lgrngn_spec PUBLIC ${libmpdataxx_INCLUDE_DIRS})
 
