icicle path fixes + find libcloud with target (i.e. installed one)

--- a/models/kinematic_2D/src/CMakeLists.txt
+++ b/models/kinematic_2D/src/CMakeLists.txt
@@ -7,12 +7,17 @@ endif()
 
 add_executable(icicle icicle.cpp)
 
-target_link_libraries(icicle ${libmpdataxx_LIBRARIES})
-target_include_directories(icicle PUBLIC ${libmpdataxx_INCLUDE_DIRS})
+# libmpdata requires std_14, but sets it with a CXX_FLAG
+# which then gets overriden by libcloudphxx std_11 compile_feature
+# hence we require std_14 feature here
+# TODO: add an exported target to libmpdata++ that requires std_14 through compile_feaures
+#       and not through a CXX_FLAG
+target_compile_features(icicle PRIVATE cxx_std_14)
 
-target_link_libraries(icicle ${libcloudphxx_LIBRARIES})
-
+target_link_libraries(icicle PRIVATE ${libmpdataxx_LIBRARIES})
+target_include_directories(icicle PRIVATE ${libmpdataxx_INCLUDE_DIRS})
+target_link_libraries(icicle PRIVATE clphxx::cloudphxx_lgrngn)
 find_package(Boost COMPONENTS program_options REQUIRED)
-target_link_libraries(icicle ${Boost_LIBRARIES})
+target_link_libraries(icicle PRIVATE ${Boost_LIBRARIES})
 
 install(TARGETS icicle DESTINATION bin)
