--- a/models/kinematic_2D/tests/paper_GMD_2015/fig_c/CMakeLists.txt
+++ b/models/kinematic_2D/tests/paper_GMD_2015/fig_c/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(plot plot.cpp)
-add_test(plot plot ${CMAKE_BINARY_DIR})
+add_test(plot plot ${CMAKE_CURRENT_BINARY_DIR})
 target_link_libraries(plot ${libmpdataxx_LIBRARIES})
 target_include_directories(plot PUBLIC ${libmpdataxx_INCLUDE_DIRS})
 
