blk2m_hello_world: fix std14

--- a/tests/blk2m_hello_world/CMakeLists.txt
+++ b/tests/blk2m_hello_world/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_executable(blk2m_hello_world blk2m_hello_world.cpp)
-target_compile_features(cloudphxx_lgrngn cxx_std_14)
+target_compile_features(blk2m_hello_world PRIVATE cxx_std_14)
 target_link_libraries(blk2m_hello_world blitz)
 add_test(blk2m_hello_world blk2m_hello_world)
