travis: run uwlcm mt mpi test

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ env:
     - TEST_SUITE=UWLCM_unit_iles
     - TEST_SUITE=UWLCM_unit_smg
     - TEST_SUITE=MPI_tests
+    - TEST_SUITE=MPI_UWLCM_MT MPI=mvapich2
 #TODO: MPI icicle test once libmpdata++ has mpi
 #TODO: MPI UWLCM test once libmpdata++ and UWLCM have mpi
 
@@ -47,6 +48,9 @@ matrix:
         - compiler: clang
           env: TEST_SUITE=cuda
 
+        - compiler: clang
+          env: TEST_SUITE=MPI_UWLCM_MT MPI=mvapich2
+
         # UWLCM is not tested on clang yet
         - compiler: clang
           env: TEST_SUITE=UWLCM_MT
@@ -60,7 +64,7 @@ addons:
 #      - g++-7
 #      - gcc-7
       - clang-4.0
-      - boost1.61
+#      - boost1.61
     sources: &sources
       - sourceline: 'ppa:rakhimov/boost'
 #      - ubuntu-toolchain-r-test
@@ -123,6 +127,9 @@ before_install:
 
 install:
     - if [[ $TEST_SUITE == 'MPI_tests'     ]]; then . ./.travis_scripts/install_mpi_dependencies.sh; fi
+    - if [[ $TEST_SUITE == 'MPI_UWLCM_MT'     ]]; then wget https://raw.githubusercontent.com/pdziekan/UWLCM/mpi_up_to_date/.travis_scripts/install_mpi_dependencies.sh -O install_uwlcm_mpi_dependencies.sh; fi
+    - if [[ $TEST_SUITE == 'MPI_UWLCM_MT'     ]]; then chmod +x install_uwlcm_mpi_dependencies.sh; fi
+    - if [[ $TEST_SUITE == 'MPI_UWLCM_MT'     ]]; then . ./install_uwlcm_mpi_dependencies.sh; fi
 
     # redefine CXX to the actual version used
 #    - if [[ $TRAVIS_OS_NAME == 'linux' && $COMPILER == 'clang++' ]]; then export CXX=clang++-4.0; fi
@@ -147,7 +154,8 @@ install:
 
     - if [[ $TEST_SUITE == 'KidA'     ]]; then sudo $apt_get_install gfortran nco libnetcdf-dev libnetcdff-dev python-cffi; fi
 
-    # recent boost is installed using addons functionality
+    # boost
+    - if [[ $TEST_SUITE != 'MPI_UWLCM_MT'     ]]; then sudo $apt_get_install boost1.61; fi
 
     # cmake 
     - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then wget https://github.com/Kitware/CMake/releases/download/v3.13.2/cmake-3.13.2-Linux-x86_64.sh; fi
@@ -215,6 +223,18 @@ job_info: &precache_default
     - . ./.travis_scripts/install_mpi_dependencies.sh
   script: echo "Preparing cache finished"
 
+job_info: &precache_uwlcm_mpi
+  stage: precache
+  os: linux
+  dist: xenial
+  language: cpp
+  compiler: gcc
+  install: 
+    - if [[ $TEST_SUITE == 'MPI_UWLCM_MT'     ]]; then wget https://raw.githubusercontent.com/pdziekan/UWLCM/mpi_up_to_date/.travis_scripts/install_mpi_dependencies.sh -O install_uwlcm_mpi_dependencies.sh; fi
+    - if [[ $TEST_SUITE == 'MPI_UWLCM_MT'     ]]; then chmod +x install_uwlcm_mpi_dependencies.sh; fi
+    - if [[ $TEST_SUITE == 'MPI_UWLCM_MT'     ]]; then . ./install_uwlcm_mpi_dependencies.sh; fi
+  script: echo "Preparing cache finished"
+
 jobs:
   include:
     - <<: *precache_default
@@ -223,3 +243,5 @@ jobs:
     - <<: *precache_default
       env: TEST_SUITE=MPI_tests
       compiler: clang
+    - <<: *precache_uwlcm_mpi
+      env: TEST_SUITE=MPI_UWLCM_MT
