add a puddle test

--- a/tests/python/physics/CMakeLists.txt
+++ b/tests/python/physics/CMakeLists.txt
@@ -1,7 +1,7 @@
 #TODO: search scipy?
 
 # non-pytest tests
-foreach(test test_coal coalescence_golovin coalescence_hall_davis_no_waals lgrngn_cond lgrngn_cond_substepping) # the coalescence_onishi_hall test is turned off as not specific enough
+foreach(test test_coal coalescence_golovin coalescence_hall_davis_no_waals lgrngn_cond lgrngn_cond_substepping puddle) # the coalescence_onishi_hall test is turned off as not specific enough
   #TODO: indicate that tests depend on the lib
   add_test(
     NAME ${test}
