--- a/bindings/python/CMakeLists.txt
+++ b/bindings/python/CMakeLists.txt
@@ -14,13 +14,15 @@ target_include_directories(cloudphxx PUBLIC ${PYTHON_INCLUDE_DIRS})
 target_link_libraries(cloudphxx ${PYTHON_LIBRARIES})
 
 # informing the Python bindings where to find Boost.Python 
-if(${Boost_MINOR_VERSION} LESS 67)
-  message(STATUS "boost python as python")
-  find_package(Boost COMPONENTS python)
-else()
-  message(STATUS "boost python as python27")
-  find_package(Boost COMPONENTS python27)
-endif()
+#if(${Boost_MINOR_VERSION} LESS 67)
+#  message(STATUS "boost python as python")
+#  find_package(Boost COMPONENTS python)
+#else()
+#  message(STATUS "boost python as python27")
+#  find_package(Boost COMPONENTS python27)
+#endif()
+
+find_package(Boost COMPONENTS python)
 if (NOT Boost_FOUND)
   message(FATAL_ERROR "
     Boost.Python not found. 
@@ -38,8 +40,10 @@ else()
     message(STATUS "boost numpy as numpy")
     find_package(Boost COMPONENTS numpy REQUIRED)
   else()
-    message(STATUS "boost numpy as numpy27")
-    find_package(Boost COMPONENTS numpy27 REQUIRED)
+    #message(STATUS "boost numpy as numpy27")
+    #find_package(Boost COMPONENTS numpy27 REQUIRED)
+    message(STATUS "boost numpy as numpy")
+    find_package(Boost COMPONENTS numpy REQUIRED)
   endif()
   target_link_libraries(cloudphxx ${Boost_LIBRARIES})
   target_compile_options(cloudphxx PRIVATE  -DBPNUMPY)
