cmake :set CMP0079 to NEW

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,12 @@ project(libcloudph++ LANGUAGES CXX)
 # - CMP0025 - make CMake distinguis between Apple and LLVM clang
 # - CMP0042 - make CMake use RPATHs on OSX
 # - CMP0060 - make CMake always keep absoult RPATHs, even if installing in implicit directory
+# - CMP0079 - make CMake allow target_link_libraries on targets created in other directories
 #if(CMAKE_VERSION VERSION_GREATER 2.9)
 #  cmake_policy(VERSION 3.0)
 #endif()
+
+cmake_policy(SET CMP0079 NEW)
 
 # put out custom find scripts first
 list(INSERT CMAKE_MODULE_PATH 0 ${PROJECT_SOURCE_DIR}/cmake)
