--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,42 @@ cache:
     - ${TRAVIS_BUILD_DIR}/deps/boost
     - ${TRAVIS_BUILD_DIR}/deps/hdf5
 
-matrix:
+# define the precache stage
+# empty phases mean that default phases (before_install, install, ...) from the test stage are used (?)
+# TODO: precache stage has a lot of unnecessary before_install and install code common to the (default) test stage;
+#       add after_success, after_failure to precache, remove building of caches from the test stage, make the build error instead;
+
+# YAML alias for the options common to precache jobs
+job_info: &precache_default
+  stage: precache
+#  os: linux
+#  dist: xenial
+#  language: cpp
+  install: 
+    - . ./.travis_scripts/install_mpi_dependencies.sh
+  script: echo "Preparing cache finished"
+
+job_info: &precache_uwlcm_mpi
+  stage: precache
+#  os: linux
+#  dist: xenial
+#  language: cpp
+#  compiler: gcc
+  install: 
+    - . ./.travis_scripts/install_mpi_uwlcm_mt_dependencies.sh
+  script: echo "Preparing cache finished"
+
+jobs:
+    include:
+      - <<: *precache_default
+        env: TEST_SUITE=MPI_tests
+        compiler: gcc
+      - <<: *precache_default
+        env: TEST_SUITE=MPI_tests
+        compiler: clang
+      - <<: *precache_uwlcm_mpi
+        env: TEST_SUITE=MPI_UWLCM_MT MPI=mvapich2
+
     exclude:
         - os: osx
           compiler: gcc
@@ -212,34 +247,3 @@ script:
     # unit tests and drops.py with MPI (drop drops here?)
     - if [[ $TEST_SUITE == 'MPI_tests' ]]; then . ./.travis_scripts/tests.sh; fi
 
-
-# YAML alias for the options common to precache jobs
-job_info: &precache_default
-  stage: precache
-  os: linux
-  dist: xenial
-  language: cpp
-  install: 
-    - . ./.travis_scripts/install_mpi_dependencies.sh
-  script: echo "Preparing cache finished"
-
-job_info: &precache_uwlcm_mpi
-  stage: precache
-  os: linux
-  dist: xenial
-  language: cpp
-  compiler: gcc
-  install: 
-    - . ./.travis_scripts/install_mpi_uwlcm_mt_dependencies.sh
-  script: echo "Preparing cache finished"
-
-jobs:
-  include:
-    - <<: *precache_default
-      env: TEST_SUITE=MPI_tests
-      compiler: gcc
-    - <<: *precache_default
-      env: TEST_SUITE=MPI_tests
-      compiler: clang
-    - <<: *precache_uwlcm_mpi
-      env: TEST_SUITE=MPI_UWLCM_MT MPI=mvapich2
