--- a/.travis.yml
+++ b/.travis.yml
@@ -93,7 +93,7 @@ addons:
     packages:
 #      - g++-7
 #      - gcc-7
-      - clang-4.0
+#      - clang-4.0
 #      - boost1.61
     sources: &sources
       - sourceline: 'ppa:rakhimov/boost'
