travis: debugging clang mpi tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -355,9 +355,9 @@ endif()
 
 enable_testing()
 
-#add_subdirectory(tests)
+add_subdirectory(tests)
 add_subdirectory(include) 
-#add_subdirectory(bindings) 
+add_subdirectory(bindings) 
 
 ############################################################################################
 # installation
