travis: debugging clang mpi tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -278,9 +278,14 @@ if(Boost_FOUND)
 #      Boost::boost
 #  )
 
+  target_link_libraries(cloudphxx_lgrngn
+    PUBLIC 
+      Boost::headers
+  )
+
 # target-based linking of boost is disabled, because it caused boost libs to be linked, while we only want the header libraries.
 # linking of boost libs caused errors on travis, where MPI_TESTS ran on clang++ failed on linking with boost_mpi from ppa:rakhimov boost.1.61
-  target_include_directories(cloudphxx_lgrngn ${Boost_INCLUDE_DIRS})
+#  target_include_directories(cloudphxx_lgrngn ${Boost_INCLUDE_DIRS})
 else()
 #TODO: check separately for optional and mandatory components
 message(FATAL_ERROR "Boost (or some of its components) not found.
