--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -273,15 +273,17 @@ target_include_directories(cloudphxx_lgrngn PRIVATE ${THRUST_INCLUDE_DIR})
 # Boost libraries
 find_package(Boost COMPONENTS) # we only need header-only boost libs
 if(Boost_FOUND)
+# CMake 3.5 - 3.14
 #  target_link_libraries(cloudphxx_lgrngn
 #    PUBLIC 
 #      Boost::boost
 #  )
 
-  target_link_libraries(cloudphxx_lgrngn
-    PUBLIC 
-      Boost::headers
-  )
+# CMake 3.15 - 
+#  target_link_libraries(cloudphxx_lgrngn
+#    PUBLIC 
+#      Boost::headers
+#  )
 
 # target-based linking of boost is disabled, because it caused boost libs to be linked, while we only want the header libraries.
 # linking of boost libs caused errors on travis, where MPI_TESTS ran on clang++ failed on linking with boost_mpi from ppa:rakhimov boost.1.61
