--- a/bindings/python/CMakeLists.txt
+++ b/bindings/python/CMakeLists.txt
@@ -37,15 +37,14 @@ if(${Boost_MINOR_VERSION} LESS 65)
   message(STATUS "boost numpy as DBPNUMERIC")
   target_compile_options(cloudphxx PRIVATE -DBPNUMERIC)
 else()
-  if(${Boost_MINOR_VERSION} LESS 67)
-    message(STATUS "boost numpy as numpy")
-    find_package(Boost COMPONENTS numpy REQUIRED)
-  else()
-    #message(STATUS "boost numpy as numpy27")
-    #find_package(Boost COMPONENTS numpy27 REQUIRED)
-    message(STATUS "boost numpy as numpy")
-    find_package(Boost COMPONENTS numpy REQUIRED)
-  endif()
+#  if(${Boost_MINOR_VERSION} LESS 67)
+#    message(STATUS "boost numpy as numpy")
+#    find_package(Boost COMPONENTS numpy REQUIRED)
+#  else()
+#    #message(STATUS "boost numpy as numpy27")
+#    #find_package(Boost COMPONENTS numpy27 REQUIRED)
+#  endif()
+  find_package(Boost COMPONENTS numpy3 REQUIRED)
   target_link_libraries(cloudphxx ${Boost_LIBRARIES})
   target_compile_options(cloudphxx PRIVATE  -DBPNUMPY)
 endif()
