--- a/.travis.yml
+++ b/.travis.yml
@@ -170,7 +170,7 @@ install:
 #    - if [[ $TEST_SUITE != 'cuda' && $TRAVIS_OS_NAME == 'linux'    ]];  then export CXX=g++-6; fi
 
     - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo $apt_get_install libblitz0-dev python3-numpy python3-scipy libthrust-dev; fi
-    - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo pip3 install -U pytest --ignore-installed six; fi
+    - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo pip install -U pytest --ignore-installed six; fi
     - if [[ $TEST_SUITE == 'cuda'     ]]; then sudo apt-get install -y cuda-toolkit-8-0; fi
 
 #TODO: install only required parts of the toolkit to save time
