--- a/.travis.yml
+++ b/.travis.yml
@@ -136,7 +136,7 @@ before_install:
     - if [[ $TEST_SUITE == 'cuda'     ]];  then wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1604/x86_64/cuda-repo-ubuntu1604_8.0.61-1_amd64.deb; fi
     - if [[ $TEST_SUITE == 'cuda'     ]];  then sudo dpkg -i cuda-repo-ubuntu1604_8.0.61-1_amd64.deb; fi
 
-    - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo apt-get update; fi
+#    - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo apt-get update; fi
 
 # based on https://github.com/daggerok/pip3-travis/blob/master/xenial.travis.yml
 #    - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo pip3 install --user $(whoami) --upgrade pip; fi # pip3 -> pip
@@ -184,7 +184,7 @@ install:
 #    - if [[ $TEST_SUITE != 'cuda' && $TRAVIS_OS_NAME == 'linux'    ]];  then export CXX=g++-6; fi
 
 #    - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo $apt_get_install libblitz0-dev python3-numpy python3-scipy libthrust-dev; fi
-    - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo pip install -U pytest --ignore-installed six; fi
+    - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo pip3 install -U pytest --ignore-installed six; fi
     - if [[ $TEST_SUITE == 'cuda'     ]]; then sudo apt-get install -y cuda-toolkit-8-0; fi
 
 #TODO: install only required parts of the toolkit to save time
