--- a/.travis.yml
+++ b/.travis.yml
@@ -106,6 +106,7 @@ addons:
       - python3-scipy
       - libblitz0-dev
       - libthrust-dev
+      - cmake
     sources: &sources
       - sourceline: 'ppa:rakhimov/boost'
 #      - ubuntu-toolchain-r-test
@@ -200,8 +201,8 @@ install:
     - if [[ $TEST_SUITE != 'MPI_UWLCM_MT' && $TEST_SUITE != 'MPI_tests'  && $TRAVIS_OS_NAME == 'linux'   ]]; then sudo $apt_get_install boost1.61; fi
 
     # cmake 
-    - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then wget https://github.com/Kitware/CMake/releases/download/v3.13.2/cmake-3.13.2-Linux-x86_64.sh; fi
-    - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo sh cmake-3.13.2-Linux-x86_64.sh --prefix=/usr/local --exclude-subdir; fi
+#    - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then wget https://github.com/Kitware/CMake/releases/download/v3.13.2/cmake-3.13.2-Linux-x86_64.sh; fi
+#    - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo sh cmake-3.13.2-Linux-x86_64.sh --prefix=/usr/local --exclude-subdir; fi
 
 # thrust
     - git clone --depth=1 git://github.com/thrust/thrust.git;
