--- a/.travis.yml
+++ b/.travis.yml
@@ -109,6 +109,8 @@ addons:
       - cmake
     sources: &sources
       - sourceline: 'ppa:rakhimov/boost'
+      - sourceline: 'deb https://apt.kitware.com/ubuntu/ xenial main'
+        key_url: 'https://apt.kitware.com/keys/kitware-archive-latest.asc'
 #      - ubuntu-toolchain-r-test
 #      - llvm-toolchain-xenial-4.0
 
